add logrus, refatoring errors logging
