# docs/swagger.yaml
@@ -163,6 +163,12 @@ paths:
         name: id
         required: true
         type: integer
+      - description: project info
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/dto.ProjectDTO'
       produces:
       - application/json
       responses:
